# zebo

./: README.md
.github/workflows/: build-and-push.yaml
zebo/: .dockerignore  Dockerfile  README.md  docker-compose.yml  poem.txt  pyproject.toml
zebo/src/zebo/: main.py
zebo/src/zebo/crews/poem_crew/: poem_crew.py
