[project]
name = "zebo"
version = "0.1.0"
description = "zebo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "fastapi>=0.124.2",
    "uvicorn>=0.38.0",
]

[project.scripts]
kickoff = "zebo.main:kickoff"
run_crew = "zebo.main:kickoff"
plot = "zebo.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
